--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{37,38,39,310,311,312}-pydantic{20,21,22,23,24,25,latest}-sphinx{40,45,53,62,70,71,72,latest}, latest, development, no_erdantic, linter
+envlist = py{37,38,39,310,311,312}-pydantic{20,21,22,23,24,25,26,latest}-sphinx{40,45,53,62,70,71,72,latest}, latest, development, no_erdantic, linter
 isolated_build = True
 
 [testenv]
@@ -21,6 +21,7 @@ deps =
     pydantic23: pydantic~=2.3.0
     pydantic24: pydantic~=2.4.0
     pydantic25: pydantic~=2.5.0
+    pydantic25: pydantic~=2.6.0
     pydanticlatest: pydantic
     sphinx40: sphinx~=4.0.0
     sphinx45: sphinx~=4.5.0
