Ignore release-please branches for CI tests

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,6 +1,8 @@
 {
     "release-type": "python",
     "target-branch": "main",
+    "include-v-in-tag": true,
+    "pull-request-title-pattern": "chore: release ${version}",
     "changelog-sections": [
         {
             "type": "feat",
@@ -19,7 +21,7 @@
         },
         {
             "type": "chore",
-            "section": "🤡 Other Changes",
+            "section": "⛏ Other Changes",
             "hidden": false
         },
         {
