--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,9 +3,11 @@ on:
   push:
     branches:
       - main
+    branches-ignore:
+      - release-please--branches--main
   pull_request:
     branches-ignore:
-      - 'release-please--branches--main'
+      - release-please--branches--main
   workflow_dispatch:
 
 jobs:
@@ -53,8 +55,8 @@ jobs:
             sphinx_version: "72"
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python_version }}
       - run: sudo apt-get install graphviz graphviz-dev
@@ -70,24 +72,25 @@ jobs:
     environment: Tests
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
       - run: sudo apt-get install graphviz graphviz-dev
       - run: pip install tox
       - run: tox -e latest
-      - name: Codecov
-        uses: codecov/codecov-action@v2.1.0
+      - name: Code Coverage
+        uses: codecov/codecov-action@v4
         with:
           fail_ci_if_error: true
+          token: ${{ secrets.CODACY_PROJECT_TOKEN }}
 
   test-no-erdantic-version:
     environment: Tests
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
       - run: pip install tox
@@ -97,8 +100,8 @@ jobs:
     environment: Tests
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
       - run: sudo apt-get install graphviz graphviz-dev
@@ -111,8 +114,8 @@ jobs:
     environment: Tests
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
       - run: pip install tox
