Fix erdantic docs and semantic tests.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,11 +1,13 @@
 name: Semantic Tests
 on:
   push:
-    branches-ignore:
-      - release-please--branches--main
+    branches:
+      - '*'
+      - '!release-please*'
   pull_request:
-    branches-ignore:
-      - release-please--branches--main
+    branches:
+      - '*'
+      - '!release-please*'
   workflow_dispatch:
 
 jobs:
