--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,3 +1,5 @@
+name: Release
+
 on:
   push:
     branches:
@@ -7,7 +9,6 @@ permissions:
   contents: write
   pull-requests: write
 
-name: release-please
 
 jobs:
   release-please:
