--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
 include = ["sphinxcontrib/autodoc_pydantic/css/autodoc_pydantic.css"]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0.0"
+python = ">=3.8.1,<4.0.0"
 Sphinx = ">=4.0"
 pydantic = ">=2.0,<3.0.0"
 pydantic-settings = ">=2.0,<3.0.0"
@@ -39,13 +39,12 @@ sphinxcontrib-mermaid = { version = "^0.9.0", optional = true }
 # extras tests
 pytest = {version = "^8.0.0", optional = true }
 coverage = { version ="^7", optional = true }
-flake8 = { version = "^7.0.0", optional = true }
+
+# extras linting/formatting
+ruff = { version = "^0.3", optional = true }
 
 # extras erdantic
 erdantic = { version ="^0.7.0", optional = true }
-
-[tool.pytest.ini_options]
-minversion = "6.0"
 
 [tool.poetry.extras]
 docs = ["sphinx-rtd-theme",
@@ -54,11 +53,77 @@ docs = ["sphinx-rtd-theme",
         "sphinxcontrib-mermaid"]
 
 test = ["pytest",
-        "coverage",
-        "flake8"]
+        "coverage"]
+
+linting = ["ruff"]
 
 erdantic = ["erdantic"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+
+[tool.ruff]
+# Exclude a variety of commonly ignored directories.
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".git-rewrite",
+    ".hg",
+    ".ipynb_checkpoints",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pyenv",
+    ".pytest_cache",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    ".vscode",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "site-packages",
+    "venv",
+]
+
+# Same as Black.
+line-length = 88
+indent-width = 4
+
+# Assume Python 3.8
+target-version = "py38"
+
+unsafe-fixes = false
+
+[tool.ruff.lint]
+# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
+# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
+# McCabe complexity (`C901`) by default.
+select = ["ALL"]
+ignore = ["D", "ANN101", "ANN102", "COM812", "ISC001", "Q000", "Q003"]
+
+# Allow fix for all enabled rules (when `--fix`) is provided.
+fixable = ["ALL"]
+unfixable = []
+
+[tool.ruff.format]
+quote-style = "single"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
+docstring-code-format = true
+docstring-code-line-length = "dynamic"
+
+[tool.ruff.lint.flake8-annotations]
+mypy-init-return = false
