Add ruff to CI pipeline

--- a/tox.ini
+++ b/tox.ini
@@ -70,16 +70,13 @@ deps =
     git+https://github.com/drivendataorg/erdantic.git
 
 [testenv:linter]
+skip_sdist = true
 skip_install = true
-deps =
-    flake8
-    flake8-bugbear
-    flake8-typing-imports>=1.1
-    pep8-naming
-commands =
-    flake8 sphinxcontrib/autodoc_pydantic/
+deps = ruff
+commands = ruff check sphinxcontrib
 
-[flake8]
-ignore =
-    TYP001
-    TYP004
+[testenv:formatter]
+skip_sdist = true
+skip_install = true
+deps = ruff
+commands = ruff format --diff
