--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
 include = ["sphinxcontrib/autodoc_pydantic/css/autodoc_pydantic.css"]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0.0"
+python = ">=3.8.1,<4.0.0"
 Sphinx = ">=4.0"
 pydantic = ">=2.0,<3.0.0"
 pydantic-settings = ">=2.0,<3.0.0"
@@ -39,13 +39,12 @@ sphinxcontrib-mermaid = { version = "^0.9.0", optional = true }
 # extras tests
 pytest = {version = "^8.0.0", optional = true }
 coverage = { version ="^7", optional = true }
-flake8 = { version = "^7.0.0", optional = true }
+
+# extras linting/formatting
+ruff = { version = "^0.3", optional = true }
 
 # extras erdantic
 erdantic = { version ="^0.7.0", optional = true }
-
-[tool.pytest.ini_options]
-minversion = "6.0"
 
 [tool.poetry.extras]
 docs = ["sphinx-rtd-theme",
@@ -54,11 +53,15 @@ docs = ["sphinx-rtd-theme",
         "sphinxcontrib-mermaid"]
 
 test = ["pytest",
-        "coverage",
-        "flake8"]
+        "coverage"]
+
+linting = ["ruff"]
 
 erdantic = ["erdantic"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+minversion = "6.0"
