--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{37,38,39,310}-pydantic{15,16,17,18,19,110,latest}-sphinx{34,35,40,41,42,43,44,45,50,51,52,60,61,62,70,latest}, latest, development, no_erdantic, linter
+envlist = py{37,38,39,310}-pydantic{15,16,17,18,19,110,latest}-sphinx{40,45,50,51,52,60,61,62,70,71,72,latest}, latest, development, no_erdantic, linter
 isolated_build = True
 
 [testenv]
@@ -22,17 +22,22 @@ deps =
     pydantic19: pydantic~=1.9.0
     pydantic110: pydantic~=1.10.0
     pydanticlatest: pydantic
-    sphinx34: sphinx~=3.4.0
-    sphinx34: docutils>=0.14,<0.18
-    sphinx34: jinja2<3.1.0
-    sphinx35: sphinx~=3.5.0
-    sphinx35: jinja2<3.1.0
+
+    ; pins for sphinx 4.X compatibility from 
+    ; https://github.com/sphinx-doc/sphinx/issues/11890
     sphinx40: sphinx~=4.0.0
-    sphinx41: sphinx~=4.1.0
-    sphinx42: sphinx~=4.2.0
-    sphinx43: sphinx~=4.3.0
-    sphinx44: sphinx~=4.4.0
+    sphinx40: sphinxcontrib-applehelp==1.0.4
+    sphinx40: sphinxcontrib-devhelp==1.0.2
+    sphinx40: sphinxcontrib-htmlhelp==2.0.1
+    sphinx40: sphinxcontrib-qthelp==1.0.3
+    sphinx40: sphinxcontrib-serializinghtml==1.1.5
+
     sphinx45: sphinx~=4.5.0
+    sphinx45: sphinxcontrib-applehelp==1.0.4
+    sphinx45: sphinxcontrib-devhelp==1.0.2
+    sphinx45: sphinxcontrib-htmlhelp==2.0.1
+    sphinx45: sphinxcontrib-qthelp==1.0.3
+    sphinx45: sphinxcontrib-serializinghtml==1.1.5
     sphinx50: sphinx~=5.0.0
     sphinx51: sphinx~=5.1.0
     sphinx52: sphinx~=5.2.0
@@ -40,6 +45,8 @@ deps =
     sphinx61: sphinx~=6.1.0
     sphinx62: sphinx~=6.2.0
     sphinx70: sphinx~=7.0.0
+    sphinx71: sphinx~=7.1.0
+    sphinx72: sphinx~=7.2.0
     sphinxlatest: sphinx
 
 [testenv:latest]
