--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,18 +49,14 @@ jobs:
             sphinx_version: "72"
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Setup Test Environment
+        uses: ./.github/actions/setup-test-env
         with:
           python-version: ${{ matrix.python_version }}
-      - run: sudo apt-get install graphviz graphviz-dev
-      - run: pip install tox
-      - run: tox -e pydantic${{ matrix.pydantic_version }}-sphinx${{ matrix.sphinx_version }}
-      - name: Code Coverage
-        uses: codecov/codecov-action@v4
-        with:
-          fail_ci_if_error: true
-          token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          tox-environment: pydantic${{ matrix.pydantic_version }}-sphinx${{ matrix.sphinx_version }}
+          install-graphviz: true
+          continue-on-error: false
+          code-coverage: true
 
   test-latest-version:
     environment: Tests
