--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,6 +49,9 @@ jobs:
             sphinx_version: "72"
     runs-on: ubuntu-22.04
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        
       - name: Setup Test Environment
         uses: ./.github/actions/setup-test-env
         with:
