--- a/.github/actions/invoke-tox/action.yml
+++ b/.github/actions/invoke-tox/action.yml
@@ -4,7 +4,8 @@ inputs:
 
   python-version:
     description: 'Define the Python version to use'
-    required: true
+    required: false
+    default: '3.x'
 
   install-graphviz:
     description: 'Install graphviz and graphviz-dev'
