Add graphviz to develop env

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -96,6 +96,7 @@ jobs:
         uses: ./.github/actions/invoke-tox
         with:
           tox-environment: development
+          install-graphviz: true
           continue-on-error: true
 
   linter:
