--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{37,38,39,310,311,312}-pydantic{20,21,22,23,24,25,26,latest}-sphinx{40,45,53,62,70,71,72,latest}, latest, development, no_erdantic, linter
+envlist = py{37,38,39,310,311,312}-pydantic{20,21,22,23,24,25,26,27,latest}-sphinx{40,45,53,62,70,71,72,latest}, latest, development, no_erdantic, linter
 isolated_build = True
 
 [testenv]
@@ -12,7 +12,7 @@ commands =
     coverage report -m
     coverage xml
 
-[testenv:pydantic{20,21,22,23,24,25,latest}-sphinx{40,45,53,62,70,71,72,latest}]
+[testenv:pydantic{20,21,22,23,24,25,26,27,latest}-sphinx{40,45,53,62,70,71,72,latest}]
 description = "Test specific historical stable versions."
 deps =
     pydantic20: pydantic~=2.0.0
@@ -22,6 +22,7 @@ deps =
     pydantic24: pydantic~=2.4.0
     pydantic25: pydantic~=2.5.0
     pydantic26: pydantic~=2.6.0
+    pydantic27: pydantic~=2.7.0
     pydanticlatest: pydantic
 
     ; pins for sphinx 4.X compatibility from 
