Add missing python prefix to test env.

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ commands =
     coverage report -m
     coverage xml
 
-[testenv:pydantic{20,21,22,23,24,25,26,27,latest}-sphinx{40,45,53,62,70,71,72,latest}]
+[testenv:py{37,38,39,310,311,312}-pydantic{20,21,22,23,24,25,26,27,latest}-sphinx{40,45,53,62,70,71,72,latest}]
 description = "Test specific historical stable versions."
 deps =
     pydantic20: pydantic~=2.0.0
