refactor: restructure sphinx app cfg values

--- a/tox.ini
+++ b/tox.ini
@@ -71,13 +71,22 @@ deps =
     git+https://github.com/drivendataorg/erdantic.git
 
 [testenv:linter]
+description = "Run linters on the codebase."
 skip_sdist = true
 skip_install = true
 deps = ruff
 commands = ruff check sphinxcontrib
 
 [testenv:formatter]
+description = "Check correct formatting of the codebase."
 skip_sdist = true
 skip_install = true
 deps = ruff
 commands = ruff format --diff
+
+[testenv:type-checker]
+description = "Type check the codebase."
+extras = 
+    type_checking
+    erdantic
+commands = mypy sphinxcontrib/ --explicit-package-bases
