--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -123,3 +123,14 @@ jobs:
         uses: ./.github/actions/invoke-tox
         with:
           tox-environment: formatter
+
+  type-checker:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Test Environment and Run Tox
+        uses: ./.github/actions/invoke-tox
+        with:
+          tox-environment: type-checker
