Add graphviz to mypy tox env

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -134,3 +134,4 @@ jobs:
         uses: ./.github/actions/invoke-tox
         with:
           tox-environment: type-checker
+          install-graphviz: true
