--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ commands =
     coverage report -m
     coverage xml
 
-[testenv:pydantic{20,21,22,23,24,25,26,27,latest}-sphinx{40,45,53,62,70,71,72,latest}]
+[testenv:py{37,38,39,310,311,312}-pydantic{20,21,22,23,24,25,26,27,latest}-sphinx{40,45,53,62,70,71,72,latest}]
 description = "Test specific historical stable versions."
 deps =
     pydantic20: pydantic~=2.0.0
@@ -71,13 +71,22 @@ deps =
     git+https://github.com/drivendataorg/erdantic.git
 
 [testenv:linter]
+description = "Run linters on the codebase."
 skip_sdist = true
 skip_install = true
 deps = ruff
 commands = ruff check sphinxcontrib
 
 [testenv:formatter]
+description = "Check correct formatting of the codebase."
 skip_sdist = true
 skip_install = true
 deps = ruff
 commands = ruff format --diff
+
+[testenv:type-checker]
+description = "Type check the codebase."
+extras = 
+    type_checking
+    erdantic
+commands = mypy sphinxcontrib/ --explicit-package-bases
