--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ myst-parser = {version = "^2.0", optional = true }
 # extras tests
 pytest = {version = "^8.0.0", optional = true }
 coverage = { version ="^7", optional = true }
+defusedxml = { version = ">=0.7.1", optional = true }
 
 # extras type checking
 mypy = { version  = "^1.9", optional = true }
@@ -60,7 +61,8 @@ docs = ["sphinx-rtd-theme",
         "myst-parser"]
 
 test = ["pytest",
-        "coverage"]
+        "coverage",
+        "defusedxml"]
 
 linting = ["ruff"]
 
