--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{37,38,39,310,311,312}-pydantic{20,21,22,23,24,25,26,27,latest}-sphinx{40,45,53,62,70,71,72,latest}, latest, development, no_erdantic, linter
+envlist = py{37,38,39,310,311,312}-pydantic{20,21,22,23,24,25,26,27,latest}-sphinx{40,45,53,62,70,71,72,73,latest}, latest, development, no_erdantic, linter
 isolated_build = True
 
 [testenv]
@@ -12,7 +12,7 @@ commands =
     coverage report -m
     coverage xml
 
-[testenv:py{37,38,39,310,311,312}-pydantic{20,21,22,23,24,25,26,27,latest}-sphinx{40,45,53,62,70,71,72,latest}]
+[testenv:py{37,38,39,310,311,312}-pydantic{20,21,22,23,24,25,26,27,latest}-sphinx{40,45,53,62,70,71,72,73,latest}]
 description = "Test specific historical stable versions."
 deps =
     pydantic20: pydantic~=2.0.0
@@ -46,6 +46,7 @@ deps =
     sphinx70: sphinx~=7.0.0
     sphinx71: sphinx~=7.1.0
     sphinx72: sphinx~=7.2.0
+    sphinx73: sphinx~=7.3.0
     sphinxlatest: sphinx
 
 [testenv:latest]
