--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,12 @@
 [tox]
-envlist = py{37,38,39,310,311,312}-pydantic{20,21,22,23,24,25,26,27,latest}-sphinx{40,45,53,62,70,71,72,73,latest}, latest, development, no_erdantic, linter
+envlist = 
+    py{37,38,39,310,311,312}-pydantic{20,21,22,23,24,25,26,27,latest}-sphinx{40,45,53,62,70,71,72,73,latest}
+    latest
+    pre-release
+    no-erdantic
+    linter
+    formatter
+    type-checker
 isolated_build = True
 
 [testenv]
@@ -73,20 +80,18 @@ extras =
     docs
     erdantic
 
-[testenv:no_erdantic]
+[testenv:pre-release]
+description = "Test the latest pre-release versions available from PyPI."
+pip_pre = true
+extras =
+    test
+    docs
+    erdantic
+
+[testenv:no-erdantic]
 description = "Test without optional erdantic dependency"
 extras =
     test
-
-[testenv:development]
-description = "Test the most recent development versions from git repositories."
-deps =
-    git+https://github.com/samuelcolvin/pydantic.git
-    git+https://github.com/sphinx-doc/sphinx.git
-    git+https://github.com/executablebooks/sphinx-tabs.git
-    git+https://github.com/executablebooks/sphinx-copybutton.git
-    git+https://github.com/readthedocs/sphinx_rtd_theme.git
-    git+https://github.com/drivendataorg/erdantic.git
 
 [testenv:linter]
 description = "Run linters on the codebase."
