--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ envlist =
     linter
     formatter
     type-checker
+    security-scan-{lib,dev}
 isolated_build = True
 
 [testenv]
@@ -113,3 +114,15 @@ extras =
     type_checking
     erdantic
 commands = mypy sphinxcontrib/ --explicit-package-bases
+
+[testenv:security-scan{lib,dev}]
+description = "Scan for security vulnerabilities."
+extras =
+    erdantic
+    security
+    scandev: test
+    scandev: docs
+    scandev: linting
+    scandev: type_checking
+commands = 
+    pip-audit -v
