--- a/.github/workflows/tests-push-pr.yml
+++ b/.github/workflows/tests-push-pr.yml
@@ -1,4 +1,4 @@
-name: Semantic Tests
+name: "TESTS: Push/Pull"
 on:
   push:
   pull_request:
@@ -121,4 +121,20 @@ jobs:
         uses: ./.github/actions/invoke-tox
         with:
           tox-environment: type-checker
+          install-graphviz: true
+
+  security-scan:
+    runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        scan: ["lib", "dev"]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+  
+      - name: Setup Test Environment and Run Tox
+        uses: ./.github/actions/invoke-tox
+        with:
+          tox-environment: security-scan${{ matrix.scan }}
           install-graphviz: true
