--- a/.github/workflows/tests-scheduled.yml
+++ b/.github/workflows/tests-scheduled.yml
@@ -1,4 +1,4 @@
-name: Scheduled Tests
+name: "TESTS: Scheduled"
 on:
   schedule:
     - cron: "0 1 * * *"
@@ -28,4 +28,20 @@ jobs:
         uses: ./.github/actions/invoke-tox
         with:
           tox-environment: pre-release
+          install-graphviz: true
+
+  security-scan:
+    runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        scan: ["lib", "app"]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+  
+      - name: Setup Test Environment and Run Tox
+        uses: ./.github/actions/invoke-tox
+        with:
+          tox-environment: security-scan-${{ matrix.scan }}
           install-graphviz: true
