Fix incorrect tox env name for security scans

--- a/.github/workflows/tests-scheduled.yml
+++ b/.github/workflows/tests-scheduled.yml
@@ -35,7 +35,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scan: ["lib", "app"]
+        scan: ["lib", "dev"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
