--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,8 @@ sphinxcontrib-mermaid = { version = "^0.9.0", optional = true }
 myst-parser = {version = "^3.0.0", optional = true }
 
 # extras tests
-pytest = {version = "^8.0.0", optional = true }
+pytest = { version = "^8.0.0", optional = true }
+pytest-sugar = { version = "^1.0.0", optional = true }
 coverage = { version ="^7", optional = true }
 defusedxml = { version = ">=0.7.1", optional = true }
 
@@ -64,6 +65,7 @@ docs = ["sphinx-rtd-theme",
         "myst-parser"]
 
 test = ["pytest",
+        "pytest-sugar",
         "coverage",
         "defusedxml"]
 
